# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "everything-rust-wrapper"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
lazy_static = "1.4.0"

[dependencies]
libloading = "0.7"
widestring = "1.0.2"
winapi = "0.3.9"
rayon = "1.5.3"
bitflags = "1.3.2"
num_enum = "0.5.7"
