[package]
name = "everything-rs"
version = "0.1.3"
edition = "2021"
authors = ["Reed Hambrook", "reed.hambrook@gmail.com"]
description = "Ergonomic wrapper around everything-sys-bindgen for the Everything SDK"
readme = "README.md"
repository = "https://github.com/reedHam/everything-wrapper/tree/master/everything-rs"
homepage = "https://github.com/reedHam/everything-wrapper/tree/master/everything-rs"
license = "MIT OR Apache-2.0"
keywords = ["everything", "search", "windows", "files", "database"]
categories = ['api-bindings', 'database', "os::windows-apis"]


include = ["src/**/*.rs", "Everything64.dll", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
everything-sys-bindgen = "0.1.3"
serde = { version = "1.0.162", features = ["derive"] }
ts-rs = "6.2.1"
widestring = "1.0.2"
bitflags = "2.3.1"

[dev-dependencies]
lazy_static = "1.4.0"
