[package]
name = "everything-sys-bindgen"
version = "0.1.0"
edition = "2021"
authors = ["Reed Hambrook", "reed.hambrook@gmail.com"]
description = "Bindings to the Everything SDK using bindgen"
readme = "README.md"
repository = "https://github.com/reedHam/everything-wrapper"
homepage = "https://github.com/reedHam/everything-wrapper"
license = "MIT OR Apache-2.0"
keywords = ["everything", "sdk", "bindings", "ffi", "windows"]
categories = ["external-ffi-bindings", "os::windows-apis"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "Everything64.dll",
    "bindings.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"

[dev-dependencies]
widestring = "1.0.2"
