[package]
name = "everything-sys-bindgen"
version = "0.1.5"
edition = "2021"
authors = ["Reed Hambrook", "reed.hambrook@gmail.com"]
description = "Bindings to the Everything SDK using bindgen"
readme = "README.md"
repository = "https://github.com/reedHam/everything-wrapper/tree/master/everything-sys-bindgen"
homepage = "https://github.com/reedHam/everything-wrapper/tree/master/everything-sys-bindgen"
license = "MIT OR Apache-2.0"
keywords = ["everything", "sdk", "bindings", "ffi", "windows"]
categories = ["external-ffi-bindings", "os::windows-apis"]
targets = ["x86_64-pc-windows-msvc"]

include = [
    "src/**/*.rs",
    "Everything.h",
    "Everything64.dll",
    "Everything64.lib",
    "Everything.rs",
    "README.md",
    "build.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.65.1"

[dev-dependencies]
widestring = "1.0.2"
