[package]
name = "everything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
everything_sys = { path = "../everything_sys" }
widestring = "*"
windows = { version = "0.48.0", features = ["Win32_Foundation"] }


[dev-dependencies]
lazy_static = "1.4.0"
