[package]
name = "everything"
version = "0.1.0"
edition = "2021"
include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock", "Everything64.dll"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
everything_sys = { path = "../everything_sys" }
widestring = "*"


[dev-dependencies]
lazy_static = "1.4.0"
