[package]
name = "everything"
version = "0.1.0"
edition = "2021"
authors = ["Reed Hambrook", "reed.hambrook@gmail.com"]
description = "Ergonomic wrapper around the everything_sys for the Everything SDK"
readme = "README.md"
repository = "https://github.com/reedHam/everything-wrapper"
homepage = "https://github.com/reedHam/everything-wrapper"
license = "MIT OR Apache-2.0"
keywords = ["everything", "search", "windows", "file system", "database"]
categories = ['api-bindings', 'database', "os::windows-apis"]


include = ["src/**/*.rs", "Cargo.toml", "Cargo.lock", "Everything64.dll"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
everything-sys-bindgen = { path = "../everything_sys" }
widestring = "*"


[dev-dependencies]
lazy_static = "1.4.0"
